# python-homework

./: .gitignore  .pre-commit-config.yaml  README.md
.github/workflows/: main.yml
homework_1/: Makefile  README.md  pyproject.toml
homework_1/src/: config.json  log_analyzer.py
homework_1/tests/: test_log_parser.py
homework_10/: README.md  homework.ipynb  pyproject.toml
homework_10/dmia/classifiers/: logistic_regression.py
homework_11/: homework_11.ipynb
homework_12/: README.md  main.py  pyproject.toml  train.py
homework_13/: README.md  main.py  memc_load.py  pyproject.toml
homework_16/: README.md  main.py  pyproject.toml
homework_17/: README.md
homework_17/memc_loader/: go.mod  go.sum  main.go
homework_17/memc_loader/appsinstalledpb/: appsinstalled.pb.go  appsinstalled.proto
homework_2/: README.md  basic.py  intermediate.py  pyproject.toml
homework_4/: api.py  pyproject.toml  readme.md  scoring.py  test.py
homework_5/: pyproject.toml
homework_5/src/: api.py  store.py
homework_5/tests/: test_api.py  test_score.py  test_store.py  utils.py
homework_6/: pyproject.toml
homework_6/domain/: services.py
homework_6/infrastructure/: orm.py  unit_of_work.py
homework_6/tests/test_domain/: test_models.py  test_services.py
homework_6/tests/test_infrastructure/: test_db.py  test_orm.py  test_repo.py  test_unit_of_work.py
homework_7/: README.md  httpd.py  httptest.py  pyproject.toml
homework_7/src/: index.html
homework_8/: README.md  main.py  pyproject.toml
homework_8/mysite/: settings.py  urls.py
homework_8/polls/: models.py  urls.py
homework_8/polls/migrations/: 0001_initial.py
homework_9/: README.md  auth.py  main.py  model.py  predict.py  pyproject.toml  schema.py  sum_model.keras  users_db.py
