[project]
name = "homework-6"
version = "0.1.0"
description = "Warehouse management"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "SQLAlchemy==2.0.39",
]

[dependency-groups]
dev = [
    "pylint==3.3.5",
    "pytest==8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.0",
]
